Fix crash. Setting mEnabled and mMinY must be an atomic operation.

Nothing should be executed in between.

BUG: 262310